[22] Fixed issues with nav on mobile

--- a/src/master.scss
+++ b/src/master.scss
@@ -98,11 +98,12 @@ h2 {
       background-color: $secondary;
     }
   }
-  @media (max-width: 700px) {
+  @media (max-width: 991px) {
     position: fixed;
     top: 0;
     right: 0;
     width: 100%;
+    z-index: 100;
 
     .navbar-brand {
       display: flex;
@@ -184,12 +185,7 @@ h2 {
   }
 
 }
-//problem ewith nav immediately collapsing on mobile solved?:
-//later: stopped working for some reason?
 
-.collapse {
-  display: block !important;
-}
 // home container
 
 .home-container {
@@ -360,6 +356,8 @@ h2 {
 }
 
 .category-gallery {
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
